# dotfiles

./: .gitignore  README.md
alacritty/: README.md  alacritty.yml
bspwm/: README.md  bspwmrc
eww/: eww.css  eww.scss  eww.yuck
eww/dashboard/: eww.scss  eww.yuck
eww/scripts/: volume  weather_info
fish/: README.md  config.fish
hyprland/: README.md  hyprland.conf
hyprland/scripts/: dashboard  workspace.rs
mpd/: mpd.conf
nvim/custom/: mappings.lua  plugins.lua
nvim/custom/configs/: lspconfig.lua
picom/: picom.conf
rfetch/: README.md
rofi/: config.rasi
rtfetch/: README.md
scripts/: dashboard  dashboard_manager  take_screenshot  weather_info  wherefont  workspace.rs
sddm/: sddm.conf
starship/: README.md  starship.toml
swhkd/: README.md  swhkd.service  swhkd.sh  swhkdrc
sxhkd/: README.md  sxhkdrc
widgets/: README.md
widgets/dashboard/: Cargo.toml
widgets/dashboard/src/: actions.rs  main.rs  style.css
widgets/dashboard/src/clock/: mod.rs  style.css
widgets/dashboard/src/sysbtn/: mod.rs  style.css
widgets/dashboard/src/textboxnotes/: mod.rs  style.css
widgets/dashboard/src/volume/: mod.rs  style.css
widgets/dashboard/src/weather/: api.rs  cache.rs  mod.rs  style.css
widgets/dashboard/src/webbtn/: mod.rs  style.css
widgets/widgetbuilder/: Cargo.toml
widgets/widgetbuilder/src/: cache.rs  lib.rs  widget_layer.rs
xinit/: .xinitrc  README.md
